# argstream

./: .gitignore  CMakeLists.txt  README.md  argsteram.vcxproj  argsteram.vcxproj.filters  argstream.h  test.cpp
